# ai-agent-llms

./: .env.example  .gitignore  CLAUDE.md  README.md  dvc.yaml  pyproject.toml  requirements-infer.txt  requirements-train.txt  requirements.txt
.claude/agents/: dataset-verifier.md
.claude/rules/: 01-configs.md  02-data-generation.md  03-training.md  04-quantization.md  05-eval.md  06-serving.md  07-analysis.md  08-testing.md  10-integration.md
.devcontainer/: Dockerfile  Dockerfile.cuda128  Dockerfile.dev  Dockerfile.tensorrt  Dockerfile.unsloth  devcontainer.json.example
.dvc/: config
.github/workflows/: ci.yml  claude-code-review.yml
00/5604bd4ede/: metadata.json
01/01eb4d1783/: metadata.json
02/82aba88275/: metadata.json
03/86420fbc66/: metadata.json
03/e8f486036b/: metadata.json
05/101b27b106/: metadata.json
06/550fede274/: metadata.json
07/0a35de314e/: metadata.json
07/ea84ab2bc3/: metadata.json
08/a7c6d7318e/: metadata.json
09/193350f59b/: metadata.json
09/ff994b8e37/: metadata.json
0a/0d2a07ab3f/: metadata.json
0a/e057953026/: metadata.json
0a/f8610d642c/: metadata.json
10/92995c960d/: metadata.json
11/22eaf6ce7b/: metadata.json
12/c45db16ad6/: metadata.json
13/54fc5bee20/: metadata.json
14/aea83336c3/: metadata.json
17/f1f050b5aa/: metadata.json
1a/2a0c99232c/: metadata.json
1a/2d80ff0120/: metadata.json
1a/c50b59f219/: metadata.json
1c/5f3c0aef08/: metadata.json
1c/83ec62a817/: metadata.json
20/0a16ca9175/: metadata.json
20/cd15dcdb00/: metadata.json
21/0b96b10647/: metadata.json
22/b7ba6fa5db/: metadata.json
24/b47452ab1c/: metadata.json
24/ededa25425/: metadata.json
25/4d47fd88d0/: metadata.json
27/f34cdfa4f7/: metadata.json
29/56e993c531/: metadata.json
2a/28dabdd5a9/: metadata.json
2c/895a7a6315/: metadata.json
2c/ded54c599e/: metadata.json
2c/fc91525199/: metadata.json
2e/28224ce25f/: metadata.json
2e/7e355e79f5/: metadata.json
2f/4f30d61ea4/: metadata.json
30/2bb24595a3/: metadata.json
30/64d37f151a/: metadata.json
31/d5e3c9d787/: metadata.json
3a/4bf9da9611/: metadata.json
3b/aad1aab44f/: metadata.json
3c/74e0ad0602/: metadata.json
3e/295f1da02c/: metadata.json
3f/60b4f7f77d/: metadata.json
3f/cf7dd715f8/: metadata.json
43/c19bf7affc/: metadata.json
44/6fd0400f89/: metadata.json
45/a8672c7882/: metadata.json
45/dd7f67b9d5/: metadata.json
45/e41e2b54a2/: metadata.json
47/fd4c1b3339/: metadata.json
48/1a82e5d324/: metadata.json
48/339cad58a5/: metadata.json
4a/ea9d389cad/: metadata.json
4a/f77af6e874/: metadata.json
4b/547c960fd5/: metadata.json
4d/244d67ae42/: metadata.json
4d/f344061287/: metadata.json
4f/da205813d4/: metadata.json
4f/ddf8396d8e/: metadata.json
50/a313a74e4f/: metadata.json
50/f7985846a3/: metadata.json
53/61e76bddf8/: metadata.json
53/f37bb612ce/: metadata.json
54/537a69e715/: metadata.json
54/c0bf550051/: metadata.json
55/662d8fa95c/: metadata.json
55/d259654338/: metadata.json
56/c7382fe4dd/: metadata.json
56/f53017aff4/: metadata.json
58/ec997bcf74/: metadata.json
59/bd4cb5d642/: metadata.json
5a/3ab73e4dd9/: metadata.json
5a/f180e12bb6/: metadata.json
5b/3df8a02a58/: metadata.json
5b/f0295a949f/: metadata.json
5c/c6fc87971b/: metadata.json
5c/caa30117c5/: metadata.json
5e/40a9ab1fbb/: metadata.json
5e/45c56b2702/: metadata.json
61/38426b40d8/: metadata.json
63/a0d4b9995b/: metadata.json
64/b4002b0865/: metadata.json
65/f0878369f1/: metadata.json
6b/d0166d2ce4/: metadata.json
6c/ebec71806d/: metadata.json
6d/eaed6a2a11/: metadata.json
6d/f114363d99/: metadata.json
71/61a7b5d8f1/: metadata.json
71/7caf0b0979/: metadata.json
73/68760385a8/: metadata.json
76/7cb2b41575/: metadata.json
77/f59e5e68ec/: metadata.json
78/aadb48f93c/: metadata.json
79/6d72fe4514/: metadata.json
7b/737aea7058/: metadata.json
7c/bdb6f18a1d/: metadata.json
7d/8c603c8b3f/: metadata.json
7d/a545b3ed1f/: metadata.json
7d/e4050e545f/: metadata.json
7e/e458dd0a64/: metadata.json
80/7a48ab4cf6/: metadata.json
84/35e47fa91c/: metadata.json
85/b099005531/: metadata.json
86/21ea70f3f9/: metadata.json
86/634e5bf69f/: metadata.json
88/479063c22f/: metadata.json
89/2a76cbc6ad/: metadata.json
checkpoints/: .gitignore
docs/: Codebase_Spec_LLM_Workflow_Agents_Experiment.md  concurrency_benchmark.md  concurrency_benchmark_results.md  concurrency_latency_analysis.docx  data_generation_recipes.md  data_generation_recipes_task_c.md  docker_no_space_left_fix.md  fine_tuning_recipes.md  grpo_diagnosis_gemma4_26b.md  grpo_heldout_metric_and_gt_audit.md  grpo_tool_emission_gap_review.md  grpo_viability_investigation.md  metrics.md  phase7-integration-summary.md  task_a_data_quality_review.md  training_methodology.md  turboquant_model_patches.md
results/: .gitignore  concurrency.dvc  exp_a.dvc
scripts/: build_concurrency_report.py  build_trtllm_engines.sh  clean_corrupted_conversations.py  clean_task_a_sft.py  clean_task_c_pairs.py  concat_task_a.py  filter_grpo_data.py  free_running_multiturn_probe.py  generate_benchmark_data.sh  generate_benchmark_data_teacher.sh  generate_data.sh  generate_eval_data.sh  generate_grpo_data.sh  generate_playbook_benchmark_data.sh  generate_playbook_sft_data.sh  generate_sft_data.sh  generate_sft_until_target.py  heldout_composite_audit.py  heldout_composite_check.py  install_infer.sh  install_sglang.sh  install_train.sh  install_train_cu128.sh  install_train_unsloth.sh  install_trtllm.sh  normalize_grpo_types.py  passk_tool_emission_probe.py  patch_model_config.py  perturn_fair_composite.py  preflight_entropy_diag.py  rederive_target_bar.py  remove_placeholder_conversations.py  rescore_preflight.py  rft_headroom_probe.py  run_chat_ui.sh  run_concurrency_benchmark.sh  run_exp_a.sh  run_exp_a_per_level.sh  run_exp_a_single.sh  run_exp_b.sh  (+9 more)
serving/: _yaml_helper.sh  launch.sh  launch_sglang.sh  launch_trtllm.sh  launch_vllm.sh
tests/: conftest.py  test_lmcache_entrypoint.py  test_serving_launch_dispatch.py
(+1331 files in other folders)
