[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-workflow-agents"
version = "0.1.0"
description = "LLM workflow-orchestrating agents with KV cache quantization on H100"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "wpawgasa" }]

dependencies = [
    # Core ML
    "torch>=2.11.0",
    "peft>=0.14.0",
    "trl>=0.15.0",
    "accelerate>=0.34.0",
    # Quantization
    "triton>=3.0.0",
    # Data & evaluation
    "datasets>=2.19.0",
    "networkx>=3.2",
    "jsonschema>=4.21.0",
    # Analysis & visualization
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Config & logging
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "wandb>=0.17.0",
    # Constrained decoding
    "outlines>=0.0.40",
    "google-genai>=1.70.0",
    "anthropic>=0.88.0",
    "python-dotenv>=1.2.2",
    # Report generation
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "dvc[gs]>=3.0",
]

# vLLM plugin entry point. Auto-loaded by vllm.plugins.load_general_plugins()
# in every vLLM process (APIServer, engine-core, worker). Installs runtime
# patches for TurboQuant + hybrid-model KV-cache compatibility.
[project.entry-points."vllm.general_plugins"]
llm_workflow_agents_turboquant = "llm_workflow_agents.vllm_plugin:register"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "peft.*", "trl.*", "vllm.*", "triton.*", "wandb.*", "outlines.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: requires CUDA GPU",
    "slow: long-running test",
]
