[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-workflow-agents"
version = "0.1.0"
description = "LLM workflow-orchestrating agents with KV cache quantization on H100"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "wpawgasa" }]

dependencies = [
    # Core (shared by train + infer venvs). Torch / transformers / vLLM are
    # pinned per-venv via the `train` and `infer` extras below — they conflict
    # and cannot coexist in one environment. See requirements-{train,infer}.txt
    # and scripts/install_{train,infer}.sh.
    "peft>=0.14.0",
    "accelerate>=0.34.0",
    "triton>=3.0.0",
    # Data & evaluation
    "datasets>=2.19.0",
    "networkx>=3.2",
    "jsonschema>=4.21.0",
    # Analysis & visualization
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Config & logging
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "wandb>=0.17.0",
    # Constrained decoding
    "outlines>=0.0.40",
    "google-genai>=1.70.0",
    "anthropic>=0.88.0",
    "python-dotenv>=1.2.2",
    # Report generation
    "python-docx>=1.1",
]

[project.optional-dependencies]
# Training venv (`.venv-train`). Pins set by Unsloth's resolver — Unsloth
# requires this exact torch/transformers/trl trio. vLLM 0.19.1 is the latest
# version with a published cu130 wheel (installed via scripts/install_train.sh
# from the GitHub release URL, since PyPI only serves the cu129 build).
train = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    # transformers is overridden to git HEAD by install_train.sh — Unsloth's
    # released wheel pins 4.57.6, but loading newer model classes (e.g.
    # `RedHatAI/gemma-4-26B-A4B-it-FP8-Dynamic`) requires the v5.7+ dev
    # branch. Keep the pin permissive so uv doesn't fight the override.
    "transformers>=4.57.6",
    "trl==0.24.0",
    "vllm==0.19.1",
    "unsloth==2026.4.8",
    "unsloth-zoo==2026.4.9",
    "bitsandbytes>=0.49",
    "xformers>=0.0.35",
    "torchao>=0.17",
]

# Inference venv (`.venv-infer`). vLLM 0.20.0 + transformers 5.6.2 are
# required for the Gemma-4 mm_prefix mask + Qwen3.6 hybrid hooks in
# launch_vllm_turboquant.py and vllm_plugin.py. vLLM 0.20.0 has no cu130
# wheel published; the cu129 wheel from PyPI runs on CUDA 13 via forward
# compatibility.
infer = [
    "torch>=2.11.0",
    "transformers==5.6.2",
    "trl>=0.15.0",
    "vllm==0.20.0",
    # flash-attn intentionally omitted: its sdist build fails when uv's build
    # isolation pulls cu129 torch into the build env on a CUDA 13 host. vLLM
    # ships its own FlashAttention path, so this is optional. To install
    # manually against a matching torch, pre-install torch then:
    #   uv pip install flash-attn --no-build-isolation
    "xgrammar>=0.1.0",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "dvc[gs]>=3.0",
]

# vLLM plugin entry point. Auto-loaded by vllm.plugins.load_general_plugins()
# in every vLLM process (APIServer, engine-core, worker). Installs runtime
# patches for TurboQuant + hybrid-model KV-cache compatibility.
[project.entry-points."vllm.general_plugins"]
llm_workflow_agents_turboquant = "llm_workflow_agents.vllm_plugin:register"

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

# flash-attn doesn't declare torch as a build dep but its setup.py imports
# torch at build time. Inject torch into its build env so uv can resolve it
# without --no-build-isolation.
[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "peft.*", "trl.*", "vllm.*", "triton.*", "wandb.*", "outlines.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: requires CUDA GPU",
    "slow: long-running test",
]
